--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "jspdf": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
     "reactjs-localstorage": "^1.0.1",
     "web-vitals": "^1.1.1"
   },
