--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.21.1",
     "jspdf": "^2.3.1",
     "react": "^17.0.2",
+    "react-clock": "^3.0.0",
     "react-dom": "^17.0.2",
+    "react-live-clock": "^5.2.0",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
